# SecCam

./: .gitignore  CMakeLists.txt  README.md  TRAINING_CAPTURE_API.md  partitions_16mb_singleapp.csv  pio_out.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-cam-detect  sdkconfig.esp32-s3-cam-detect-coco320  sdkconfig.esp32-s3-cam-edge-impulse
include/: app_camera.h  app_capture_uploader.h  app_config.h  app_http_server.h  app_person_detect.h  app_wifi_ap.h  app_wifi_sta.h
scripts/: flash_pedestrian_model.py  pi_capture_receiver.py  pi_capture_receiver.service
src/: CMakeLists.txt  GooUuuu-CAM.code-workspace  app_camera.cpp  app_capture_uploader.cpp  app_http_server.cpp  app_person_detect.cpp  app_wifi_ap.cpp  app_wifi_sta.cpp  idf_component.yml  main.cpp
test/: ESP-output.txt  build_output.txt
